[metadata]
name = plifx-
version = 0.0.1
author = Andrew Fila
author_email = andrew.m.fila@gmail.com
description = a lifx gui implementation for linux
long_description = file: README.md
long_description = text/markdown
url = https://github.com/AndrewFila/plifx
project_urls =
    Bug Tracker = https://github.com/AndrewFila/plifx/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

